// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a 404 error correctly 1`] = `
<BasicSection
  className="src-components-error-index__section"
>
  <h1
    className="src-components-error-index__heading"
  >
    <FaThumbsODown
      className="src-components-error-index__icon"
    />
    Sorry—we couldn't find this page
  </h1>
</BasicSection>
`;

exports[`should render a 500 error correctly 1`] = `
<BasicSection
  className="src-components-error-index__section"
>
  <h1
    className="src-components-error-index__heading"
  >
    <FaThumbsODown
      className="src-components-error-index__icon"
    />
    Oops—something went wrong
  </h1>
</BasicSection>
`;
